Fix issues updating events and sending them to Telegram. Add hours to events

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -266,4 +266,6 @@
 @import "utilities/utilities.opacity";
 @import "utilities/utilities.sizes";
 
-
+.wickedpicker {
+  z-index: 1000 !important;
+}
