Restyle input on ios devices

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -273,3 +273,8 @@
 .c-table__cell {
   white-space: inherit;
 }
+
+input[type="time"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+}
